--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Integrante Grupo</h2>
     <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores eos adipisci similique cupiditate nemo facilis laborum id sequi, ratione, eum enim fugit dicta minima. Libero eaque provident deleniti dolores sunt! hola</h3>
     <img src="pc.jpg"  width="50%" height="50%" alt="">
-    <p></p>
+    <p></p><i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
 holaaass
 </body>
 </html>
